[gd_scene load_steps=4 format=4 uid="uid://btyr1cu2knrxh"]

[ext_resource type="Script" uid="uid://bb4bjqh7b61da" path="res://scenes/levels/SawmillWorkshop/SawmillWorkshop.gd" id="1_aqplb"]
[ext_resource type="TileSet" uid="uid://bkacfi56tmg8i" path="res://tilesets/puzzle_tileset.tres" id="2_nrl4d"]
[ext_resource type="PackedScene" uid="uid://bx2syps2qmyxq" path="res://scenes/sprites/Demolitonist/Demolitonist.tscn" id="3_xaffn"]

[node name="SawmillWorkshop" type="Node2D"]
script = ExtResource("1_aqplb")

[node name="Ground" type="TileMapLayer" parent="."]
y_sort_enabled = true
texture_filter = 1
tile_map_data = PackedByteArray("AAD9//7/AAAbAAAAAAD9////AAAaAAEAAAD9/wAAAAAYAAEAAAD9/wEAAAAbAAEAAAD9/wIAAAAbAAEAAAD9/wMAAAAZAAEAAAD+//7/AAAbAAAAAAD+////AAAZAAAAAAD+/wAAAAAbAAEAAAD+/wEAAAAbAAEAAAD+/wIAAAAZAAAAAAD+/wMAAAAYAAEAAAD///7/AAAaAAEAAAD/////AAAYAAEAAAD//wAAAAAYAAEAAAD//wEAAAAYAAAAAAD//wIAAAAbAAEAAAD//wMAAAAZAAEAAAAAAP7/AAAYAAEAAAAAAP//AAAbAAAAAAAAAAAAAAAbAAEAAAAAAAEAAAAbAAEAAAAAAAIAAAAbAAEAAAAAAAMAAAAZAAEAAAABAP7/AAAYAAEAAAABAP//AAAaAAAAAAABAAAAAAAbAAAAAAABAAEAAAAYAAAAAAABAAIAAAAZAAAAAAABAAMAAAAYAAEAAAACAAIAAAAaAAEAAAA=")
tile_set = ExtResource("2_nrl4d")

[node name="Floor" type="TileMapLayer" parent="."]
z_index = 1
texture_filter = 1
tile_set = ExtResource("2_nrl4d")

[node name="Walls" type="TileMapLayer" parent="."]
z_index = 2
texture_filter = 1
tile_map_data = PackedByteArray("AAD8/wIAAAAEAAcAAAD8/wEAAAAEAAcAAAD8/wAAAAAEAAcAAAD8////AAAEAAcAAAD8//7/AAAEAAcAAAD8//3/AAAFAAYAAAD9//3/AAACAAkAAAAAAP3/AAACAAkAAAD///3/AAACAAkAAAACAAAAAAAHAAkAAAACAAEAAAAAAAgAAAACAAIAAAAFAAoAAAD+//3/AAACAAkAAAD8/wMAAAABAAgAAAACAAMAAAADAAkAAAD9/wMAAAAHAAYAAAABAP3/AAAHAAgAAAD//wAAAAANABIAAAABAP7/AAAEAAkAAAABAP//AAAEAAkAAAAAAAMAAAAFAAgAAAABAAMAAAACAAkAAAABAAAAAAABAAgAAAD+/wQAAAACAAkAAAD//wQAAAACAAkAAAAAAAQAAAADAAgAAAD9/wQAAAABAAgAAAD9//7/AAAWABEAAAA=")
tile_set = ExtResource("2_nrl4d")

[node name="Trails" type="TileMapLayer" parent="."]
z_index = 3
texture_filter = 1
tile_set = ExtResource("2_nrl4d")

[node name="Items" type="TileMapLayer" parent="."]
z_index = 3
y_sort_enabled = true
texture_filter = 1
tile_set = ExtResource("2_nrl4d")

[node name="Demolitonist" parent="Items" instance=ExtResource("3_xaffn")]
z_index = 3
z_as_relative = false
position = Vector2(41, 45)

[node name="Trees" type="TileMapLayer" parent="."]
z_index = 4
y_sort_enabled = true
texture_filter = 1
tile_set = ExtResource("2_nrl4d")

[node name="BadItems" type="TileMapLayer" parent="."]
z_index = 6
texture_filter = 1
tile_map_data = PackedByteArray("AAAAAP7/AAAOABUAAAD///7/AAANABUAAAAAAAAAAAAOABAAAAD+/wMAAAANABUAAAD//wMAAAAOABUAAAD//wIAAAAOABAAAAD+////AAAIABIAAAD/////AAAMABQAAAABAAEAAAALABAAAAA=")
tile_set = ExtResource("2_nrl4d")

[node name="GoodItems" type="TileMapLayer" parent="."]
z_index = 6
texture_filter = 1
tile_map_data = PackedByteArray("AAAAAP7/AAASABMAAAD///7/AAARABMAAAAAAAAAAAAOABAAAAD+/wMAAAASABMAAQD//wMAAAAWABMAAAD//wIAAAAOABAAAAD+////AAAMABAAAAD/////AAANABQAAAABAAEAAAAaABEAAAA=")
tile_set = ExtResource("2_nrl4d")

[node name="MovingItems" type="TileMapLayer" parent="."]
modulate = Color(1, 0.392157, 0.392157, 0.392157)
z_index = 6
texture_filter = 1
tile_set = ExtResource("2_nrl4d")
